<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">SpamGuard</string>
	
	<string name="inline_preferences">Settings</string>
	
	<!--Tabs-->
	<string name="title_preferences">Preferences</string>
		<string name="title_update_interval">Update interval"</string>
	<string name="title_whitelist">Whitelist</string>
		<string name="title_whitelist_sender">Sender</string>
		<string name="title_whitelist_text">Content</string>
	<string name="title_blacklist">Blacklist</string>
		<string name="title_blacklist_sender">Sender</string>
		<string name="title_blacklist_text">Content</string>
	<string name="title_spams">Spams</string>
	
	<!--Toggle App-->
	<string name="title_toggle_spamguard">Toggle SpamGuard</string>
	<string name="summary_toggle_spamguard">Enable/disable SpamGuard</string>
	
	<!--Regex-->
	<string name="title_regex_preference">Filter by regex</string>
	<string name="summary_regex_preference">Marks spam SMSes that match regex</string>
	<string name="dialog_title_regex_preference">Enter regex string</string>
	
	<!--Allow Contacts-->
	<string name="title_allow_contacts">Allow contacts</string>
	
	<!--Block Non-numeric Sender-->
	<string name="title_block_nonnumeric">Block non-numeric sender</string>
	<string name="summary_block_nonnumeric">E.g. &quot;D&amp;R&quot;, &quot;Vodafone&quot;</string>
	
	<!--Block All-capital SMS-->
	<string name="title_block_allcapital">Block all-capital SMS</string>
	<string name="summary_block_allcapital"></string>
	
	<!--Toggle SVM-->
	<string name="title_toggle_svm">Toggle SmartGuard</string>
	<string name="summary_toggle_svm">Enable smart sms monitoring by content</string>
	
	<!--Menu-->
	<string name="add_number">Add Number</string>
	<string name="add_text">Add Text</string>
	<string name="add_regex">Add Regex</string>
	
	<!--ContextMenu-->
	<string name="update_entry">Edit</string>
	<string name="delete_entry">Delete</string>
	
	<!--Dialog-->
	<string name="insert_number">Insert number</string>
	<string name="alert_dialog_ok">OK</string>
	<string name="alert_dialog_cancel">Cancel</string>
	
	<!-- Spams -->
	<string name="add_spam_from_inbox">Add spam from inbox</string>
	<string name="mark_as_not_spam">Mark as not spam</string>
	
	
	<!-- Spams From Inbox -->
	<string name="mark_as_spam">Mark as spam</string>
	<string name="title_spam_from_inbox">Mark Spam Messages</string>
</resources>
