<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<PreferenceCategory
		android:title="@string/inline_preferences">
		<CheckBoxPreference
			android:key="toggle_spamguard"
			android:title="@string/title_toggle_spamguard"
			android:defaultValue="true"
			android:summary="@string/summary_toggle_spamguard" />
		<CheckBoxPreference
			android:dependency="toggle_spamguard"
			android:key="allow_contacts"
			android:title="@string/title_allow_contacts"
			android:defaultValue="true" />
		<CheckBoxPreference
			android:dependency="toggle_spamguard"
			android:key="block_nonnumeric"
			android:title="@string/title_block_nonnumeric"
			android:defaultValue="false"
			android:summary="@string/summary_block_nonnumeric" />
		<CheckBoxPreference
			android:dependency="toggle_spamguard"
			android:key="block_allcapital"
			android:title="@string/title_block_allcapital"
			android:defaultValue="false"
			android:summary="@string/summary_block_allcapital" />
		<EditTextPreference
			android:dependency="toggle_spamguard"
			android:key="regex_string"
			android:title="@string/title_regex_preference"
			android:summary="@string/summary_regex_preference"
			android:dialogTitle="@string/dialog_title_regex_preference" />
	</PreferenceCategory>
</PreferenceScreen>
